fix phantom hover effect for radio groups on mobile

--- a/ui/lobby/css/_setup.scss
+++ b/ui/lobby/css/_setup.scss
@@ -75,7 +75,7 @@ $c-slider: $c-setup;
     button {
       height: 3rem;
       padding-inline: 1rem 1.2rem;
-      gap: 0.75em;
+      gap: 0.8rem;
     }
   }
 
